--- a/Main/practice E5.2
+++ b/Main/practice E5.2
@@ -1,22 +1,19 @@
 package E5;
+import java.util.Arrays;
 import java.util.Scanner;
-public class practice {
+public class practice{
     public static void main(String[] args){
         Scanner scanner = new Scanner(System.in);
-        System.out.println("Enter a floating number: ");
-        double number = scanner.nextDouble();
+        System.out.println("enter 3 strings: ");
+        String[] strings = new String[3];
+        for(int i =0 ; i<3; i++){
+            strings[i] = scanner.nextLine();
+        }
+        Arrays.sort(strings);
+        System.out.println("sorted strings are: ");
+        for(String str : strings){
+            System.out.println(str);
+        }
         scanner.close();
-        if (number==0){
-            System.out.println("Zero!");
-        } else if (number>1) {
-            System.out.println("Positive!");
-        } else if (number<0) {
-            System.out.println("Negative!");
-        }
-        if (Math.abs(number)<1){
-            System.out.println("Small!!!");
-        } else if (Math.abs(number)>1000000) {
-            System.out.println("Large!!!");
-        }
     }
 }
