--- a/Main/practice E5.2
+++ b/Main/practice E5.2
@@ -1,19 +1,40 @@
 package E5;
-import java.util.Arrays;
 import java.util.Scanner;
 public class practice{
     public static void main(String[] args){
         Scanner scanner = new Scanner(System.in);
-        System.out.println("enter 3 strings: ");
-        String[] strings = new String[3];
-        for(int i =0 ; i<3; i++){
-            strings[i] = scanner.nextLine();
-        }
-        Arrays.sort(strings);
-        System.out.println("sorted strings are: ");
-        for(String str : strings){
-            System.out.println(str);
-        }
+        System.out.println("Enter the income:");
+        double income = scanner.nextDouble();
+        double tax = calculateTax(income);
+        System.out.printf("income:%.2f.\n ",income);
+        System.out.printf("Tax:%.2f.\n",tax);
         scanner.close();
+    }
+    public static double calculateTax(double income){
+        double tax =0;
+        if(income> 500000){
+            tax +=(income-500000)*0.06;
+            income = 500000;
+        }
+        if(income>250000){
+            tax +=(income-250000)*0.05;
+            income = 250000;
+        }
+        if (income > 100000){
+            tax +=(income-100000)*0.04;
+            income =100000;
+        }
+        if(income>75000){
+            tax+=(income-75000)*0.03;
+            income=75000;
+        }
+        if(income>50000){
+            tax+=(income-50000)*0.02;
+            income =50000;
+        }
+        if(income>0){
+            tax+= income*0.01;
+        }
+        return tax;
     }
 }
