--- a/Main/practice E5.2
+++ b/Main/practice E5.2
@@ -1,13 +1,12 @@
 package E5;
 import java.util.Scanner;
-public class practice {
+public class practice1 {
     public static void main(String[] args){
         Scanner scanner = new Scanner(System.in);
         System.out.println("Enter a word: ");
         String word = scanner.nextLine();
-        for(int i=0;i<word.length();i++){
-            System.out.println(word.charAt(i));
-        }
+        String reversedWord = new StringBuilder(word).reverse().toString();
+        System.out.println("Reversed word: " +reversedWord);
         scanner.close();
     }
 }
