--- a/Main/practice E5.2
+++ b/Main/practice E5.2
@@ -1,14 +1,24 @@
 package E5;
+
 import java.util.Scanner;
+
 public class practice1 {
-    public static void main(String[] args){
-        System.out.println("multiplication table: ");
-        System.out.println("--------------------------");
-        for(int i =1;i<=10;i++){
-            for (int j=1 ;j<=10; j++){
-                System.out.printf("%5d",i*j);
+    public static void main(String[] args) {
+        Scanner scanner = new Scanner(System.in);
+        System.out.println("Enter an integer num:");
+        int num = scanner.nextInt();
+        if (num < 0) {
+            System.out.println("please enter a positive num.");
+        } else if (num == 0) {
+            System.out.println("binary digits for num 0 is: 0");
+        } else {
+            System.out.println("binary digits for" + num + "are:");
+            while (num > 0) {
+                int rem = num % 2;
+                System.out.println("rem :" + rem);
+                num = num / 2;
             }
-            System.out.println();
         }
+        scanner.close();
     }
 }
