--- a/Main/practice E5.2
+++ b/Main/practice E5.2
@@ -1,23 +1,27 @@
-package E5;
-
 import java.util.Scanner;
 
-public class practice1 {
+public class Dimond {
     public static void main(String[] args) {
         Scanner scanner = new Scanner(System.in);
-        System.out.println("Enter an integer num:");
-        int num = scanner.nextInt();
-        if (num < 0) {
-            System.out.println("please enter a positive num.");
-        } else if (num == 0) {
-            System.out.println("binary digits for num 0 is: 0");
-        } else {
-            System.out.println("binary digits for" + num + "are:");
-            while (num > 0) {
-                int rem = num % 2;
-                System.out.println("rem :" + rem);
-                num = num / 2;
+        System.out.println("enter a number for side length:");
+        int n = scanner.nextInt();
+        for (int i = 1; i <= n; i++) {
+            for (int j = i; j < n; j++) {
+                System.out.println(" ");
             }
+            for (int j = 1; j <= (2 * i - 1); j++) {
+                System.out.println("*");
+            }
+            System.out.println();
+        }
+        for (int i = n - 1; i >= 1; i--) {
+            for (int j = n; j < i; j--) {
+                System.out.println(" ");
+            }
+            for (int j = 1; j <= (2 * i - 1); j++) {
+                System.out.println("*");
+            }
+            System.out.println();
         }
         scanner.close();
     }
