--- a/Main/practice E5.2
+++ b/Main/practice E5.2
@@ -1,28 +1,32 @@
 import java.util.Scanner;
 
-public class Dimond {
+public class Square {
     public static void main(String[] args) {
         Scanner scanner = new Scanner(System.in);
-        System.out.println("enter a number for side length:");
-        int n = scanner.nextInt();
-        for (int i = 1; i <= n; i++) {
-            for (int j = i; j < n; j++) {
-                System.out.println(" ");
-            }
-            for (int j = 1; j <= (2 * i - 1); j++) {
-                System.out.println("*");
-            }
-            System.out.println();
-        }
-        for (int i = n - 1; i >= 1; i--) {
-            for (int j = n; j < i; j--) {
-                System.out.println(" ");
-            }
-            for (int j = 1; j <= (2 * i - 1); j++) {
-                System.out.println("*");
-            }
-            System.out.println();
-        }
+        System.out.println("enter the side length:");
+        int sideLength = scanner.nextInt();
+        drawSquares(sideLength);
         scanner.close();
+    }
+
+    public static void drawSquares(int n) {
+        for (int i = 0; i < n; i++) {
+            for (int j = 0; j < n; j++) {
+                System.out.println("*");
+            }
+            System.out.println(" ");
+            if (i == 0 || i == n - 1) {
+                for (int j = 0; j < n - 1; j++) {
+                    System.out.println("*");
+                }
+            } else {
+                System.out.println("*");
+                for (int j = 1; j < n - 1; j++) {
+                    System.out.println(" ");
+                }
+                System.out.println("*");
+            }
+            System.out.println();
+        }
     }
 }
