--- a/Main/practice E5.2
+++ b/Main/practice E5.2
@@ -1,32 +1,11 @@
+package E5;
 import java.util.Scanner;
-
-public class Square {
-    public static void main(String[] args) {
-        Scanner scanner = new Scanner(System.in);
-        System.out.println("enter the side length:");
-        int sideLength = scanner.nextInt();
-        drawSquares(sideLength);
-        scanner.close();
-    }
-
-    public static void drawSquares(int n) {
-        for (int i = 0; i < n; i++) {
-            for (int j = 0; j < n; j++) {
-                System.out.println("*");
-            }
-            System.out.println(" ");
-            if (i == 0 || i == n - 1) {
-                for (int j = 0; j < n - 1; j++) {
-                    System.out.println("*");
-                }
-            } else {
-                System.out.println("*");
-                for (int j = 1; j < n - 1; j++) {
-                    System.out.println(" ");
-                }
-                System.out.println("*");
-            }
-            System.out.println();
+public class practice{
+    public static void main(String[] args){
+        int sum = 0;
+        for(int i =2;i<=100;i+=2){
+            sum+=i;
         }
+        System.out.println("the sum of even numbers between 2 to 100:" + sum);
     }
 }
