--- a/Main/practice E5.2
+++ b/Main/practice E5.2
@@ -1,11 +1,20 @@
 package E5;
 import java.util.Scanner;
-public class practice{
+public class practice {
     public static void main(String[] args){
+        Scanner scanner = new Scanner(System.in);
+        System.out.println("enter a number:");
+        int num = scanner.nextInt();
+        scanner.close();
         int sum = 0;
-        for(int i =2;i<=100;i+=2){
-            sum+=i;
+        int temp = Math.abs(num);
+        while (temp>0){
+            int digit = temp % 10;
+            if(digit % 2 != 0){
+                sum +=digit;
+            }
+            temp /= 10;
         }
-        System.out.println("the sum of even numbers between 2 to 100:" + sum);
+        System.out.println("the sum of odd digits " + sum);
     }
 }
