--- a/Main/practice E5.2
+++ b/Main/practice E5.2
@@ -1,21 +1,15 @@
 package E5;
-
 import java.util.Scanner;
-
 public class practice {
-    public static void main(String[] args) {
+    public static void main(String[] args){
         Scanner scanner = new Scanner(System.in);
-        System.out.println("enter many numbers and enter -1 to stop: ");
-        int sum = 0;
-        while (scanner.hasNextInt()) {
-            int num = scanner.nextInt();
-            if (num == -1) {
-                break;
-            } else {
-                sum += num;
-            }
-        }
-        System.out.println("the total amount of sum is: " + sum);
+        System.out.println("enter a string: ");
+        String input = scanner.nextLine();
         scanner.close();
+        StringBuilder result = new StringBuilder();
+        for(int i=0;i<input.length();i+=2){
+            result.append(input.charAt(i));
+        }
+        System.out.println("every second letter: " +result);
     }
 }
