--- a/Main/practice E5.2
+++ b/Main/practice E5.2
@@ -2,11 +2,18 @@ package E5;
 import java.util.Scanner;
 public class practice {
     public static void main(String[] args){
-        Scanner scanner = new Scanner(System.in);
-        System.out.println("enter a string: ");
+Scanner scanner = new Scanner(System.in);
+        System.out.println("Enter a string: ");
         String input = scanner.nextLine();
         scanner.close();
-        String result = input.replaceAll("[aeiouAEIOU]","_");
-        System.out.println("the result string is : " +result);
+        int vowelCount =0;
+        String vowels = "aeiouAEIOU";
+        for (int i=0; i<input.length();i++){
+            char c = input.charAt(i);
+            if(vowels.indexOf(c)!= -1){
+                vowelCount++;
+            }
+        }
+        System.out.println("number of vowels: " +vowelCount);
     }
 }
