--- a/Main/practice E5.2
+++ b/Main/practice E5.2
@@ -1,19 +1,21 @@
 package E5;
 import java.util.Scanner;
+import java.util.ArrayList;
 public class practice {
     public static void main(String[] args){
-Scanner scanner = new Scanner(System.in);
-        System.out.println("Enter a string: ");
+        Scanner scanner = new Scanner(System.in);
+        System.out.println("enter a string: ");
         String input = scanner.nextLine();
         scanner.close();
-        int vowelCount =0;
+        ArrayList<Integer>
+        vowelPositions = new ArrayList<>();
         String vowels = "aeiouAEIOU";
-        for (int i=0; i<input.length();i++){
+        for(int i=0;i<input.length();i++){
             char c = input.charAt(i);
-            if(vowels.indexOf(c)!= -1){
-                vowelCount++;
+            if(vowels.indexOf(c) != -1){
+                vowelPositions.add(i);
             }
         }
-        System.out.println("number of vowels: " +vowelCount);
+        System.out.println("vowel positions: " +vowelPositions);
     }
 }
